@@ -16,26 +16,6 @@
  */
 package com.kycox.game.view;
 
-import java.awt.Color;
-import java.awt.Font;
-import java.awt.Graphics;
-import java.awt.Graphics2D;
-import java.awt.Point;
-import java.util.List;
-import java.util.Observable;
-import java.util.Observer;
-import java.util.stream.Collectors;
-
-import javax.annotation.PostConstruct;
-import javax.inject.Inject;
-import javax.inject.Named;
-import javax.swing.JFrame;
-import javax.swing.JPanel;
-import javax.swing.SwingUtilities;
-
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
-
 import com.kycox.game.body.ghost.Ghost;
 import com.kycox.game.constant.Constants;
 import com.kycox.game.constant.ladybug.LadybugStatus;
@@ -51,103 +31,116 @@ import com.kycox.game.view.ladybug.LadybugCommun;
 import com.kycox.game.view.ladybug.LadybugDyingView;
 import com.kycox.game.view.ladybug.LadybugView;
 import com.kycox.game.view.map.ScreenBlockView;
-
+import jakarta.annotation.PostConstruct;
 import lombok.Setter;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
+import org.springframework.stereotype.Component;
 
-/**
- * Vue du jeu MVC O
- *
- */
-@Named("CentralView")
+import javax.swing.*;
+import java.awt.*;
+import java.io.Serial;
+import java.util.Observable;
+import java.util.Observer;
+
+@Component
 public class CentralView extends JPanel implements Observer, DoActionAfterTimer {
 	private static final Log logger = LogFactory.getLog(CentralView.class);
+	@Serial
 	private static final long serialVersionUID = 1L;
 	private final Font defaultFont = GameFont.PACFONT.getDefaultFont();
+	private final Font scoreFont = new Font("CrackMan", Font.BOLD, 14);
 	@Setter
 	private long durationLadybugNewLife;
-	private GameModelForViews gameModelForView;
-	@Inject
-	private GhostView ghostView;
-	@Inject
-	private KeyGameController keyGameController;
-	@Inject
-	private LadybugDyingView ladybugDyingView;
-	@Inject
-	private LadybugView ladybugView;
-	private JFrame mainFrame = (JFrame) SwingUtilities.getRoot(this);
-	private final Font scoreFont = new Font("CrackMan", Font.BOLD, 14);
-	@Inject
-	private ScreenBlockView screenBlockView;
+	private transient GameModelForViews gameModelForViews;
+	private final transient GhostView ghostView;
+	private final transient KeyGameController keyGameController;
+	private final transient LadybugDyingView ladybugDyingView;
+	private final transient LadybugView ladybugView;
+	private final transient ScreenBlockView screenBlockView;
+
+	public CentralView(GhostView ghostView, KeyGameController keyGameController, LadybugDyingView ladybugDyingView, LadybugView ladybugView, ScreenBlockView screenBlockView)  {
+		this.ghostView = ghostView;
+		this.keyGameController = keyGameController;
+		this.ladybugDyingView = ladybugDyingView;
+		this.ladybugView = ladybugView;
+		this.screenBlockView = screenBlockView;
+	}
 
 	@Override
 	public void doActionAfterTimer(int nbrAction) {
 		switch (nbrAction) {
-			case 0:
-				screenBlockView.setColorMaze(Constants.BLUE_LADYBUG);
-				break;
-			default:
-				logger.debug("no number " + nbrAction + " action");
+			case 0 -> screenBlockView.setColorMaze(Constants.BLUE_LADYBUG);
+			default -> logger.debug("no number " + nbrAction + " action");
 		}
 	}
 
 	/**
-	 * FIXME : même remarque que dans le modèle du jeu; appliquer un design pattern;
-	 * ça devient un peu dificile à lire
-	 *
-	 * @param g
+	 * FIXME : même remarque que dans le modèle du jeu; appliquer un design pattern
+	 * strategy; ça devient un peu dificile à lire
 	 */
 	private void draw(Graphics g) {
 		var g2d = (Graphics2D) g;
 		drawMaze(g2d);
-		if (gameModelForView.getLadybug().isNewLife()) {
+		if (gameModelForViews.getLadybug().isNewLife()) {
 			screenBlockView.setColorMaze(Constants.COLOR_EXTRA_PAC_LADYBUG);
 			var newLiveTimer = new WaitAndDoActionAfterTimer();
 			newLiveTimer.launch(durationLadybugNewLife, this, 0);
 		}
-		if (gameModelForView.getCurrentProgramStatus().isProgramStarting()) {
+
+		if (gameModelForViews.getCurrentProgramStatus().isProgramStarting()) {
 			drawOneCenterTextLine(g2d, "wELCOME TO lADYBUG");
 			drawPresentationGhosts(g2d);
-		} else if (gameModelForView.getCurrentProgramStatus().isGameStarting()) {
-			drawThreeCenterTextLines(g2d, "eNJOY", "yOUR GAME", "gET READY");
-		} else if (gameModelForView.getCurrentProgramStatus().isLevelStarting()) {
+		} else if (gameModelForViews.getCurrentProgramStatus().isGameAskForceEndGame()) {
+			drawLadybug(g2d, ladybugView);
+			drawGhosts(g2d);
+			drawTwoCenterTextLines(g2d, "eXIT gAME", "yES - nO");
+		} else if (gameModelForViews.getCurrentProgramStatus().isProgramAskKeepPreviousGameLevel()) {
+			drawGhosts(g2d);
+			drawThreeCenterTextLines(g2d, "cONTINUE", "pREVIOUS GAME", "yES - nO");
+		} else if (gameModelForViews.getCurrentProgramStatus().isGameStarting()) {
+			drawOneCenterTextLine(g2d, "gET READY");
+		} else if (gameModelForViews.getCurrentProgramStatus().isLevelStarting()) {
 			drawLadybug(g2d, ladybugView);
 			drawGhosts(g2d);
 			var text = "lEVEL "
-			        + Utils.integerToRoman(gameModelForView.getCurrentProgramStatus().getNumLevel()).toLowerCase();
+			        + Utils.integerToRoman(gameModelForViews.getCurrentProgramStatus().getNumLevel()).toLowerCase();
 			drawOneCenterTextLine(g2d, text);
-		} else if (gameModelForView.getCurrentProgramStatus().isProgramPresentation()) {
+		} else if (gameModelForViews.getCurrentProgramStatus().isProgramPresentation()) {
 			drawGhosts(g2d);
-			if (gameModelForView.isShowHelpForKeys()) {
+			if (gameModelForViews.isShowHelpForKeys()) {
 				drawEightCenterTextLines(g2d, "hELP", "FII: sOUND ON OFF", "FIII: lADYBUG sKIN", "FIV: gHOST hEADBAND",
 				        "FV: gHOST hAT", "ARROWS: lADYBUG mOVE", "ZQSD: gHOST mOVE", "i OR ii: pLAYERS");
-			} else if (gameModelForView.isShowHelpForXboxes()) {
+			} else if (gameModelForViews.isShowHelpForXboxes()) {
 				drawEightCenterTextLines(g2d, "hELP", "x UP: sOUND ON OFF", "x DOWN: lADYBUG sKIN",
 				        "x RIGHT: gHOST h'BAND", "x LEFT: gHOST hAT", "STICK i: lADYBUG mOVE", "STICK ii: gHOST mOVE",
 				        "x OR y: pLAYERS");
+			} else if (gameModelForViews.isAtLeastOneXboxOneConnected()) {
+				drawTwoCenterTextLines(g2d, "PRESS s OR a TO sTART", "fI OR vIEW FOR hELP");
 			} else {
-				drawTwoCenterTextLines(g2d, "PRESS s TO sTART", "OR fI FOR hELP");
+				drawTwoCenterTextLines(g2d, "PRESS s TO sTART", "fI FOR hELP");
 			}
-		} else if (gameModelForView.getCurrentProgramStatus().isGameEnding()
-		        || gameModelForView.getCurrentProgramStatus().isGameEnd()) {
+		} else if (gameModelForViews.getCurrentProgramStatus().isGameEnding()
+		        || gameModelForViews.getCurrentProgramStatus().isGameEnd()) {
 			drawGhosts(g2d);
 			var levelText = "eND lEVEL "
-			        + Utils.integerToRoman(gameModelForView.getCurrentProgramStatus().getNumLevel()).toLowerCase();
+			        + Utils.integerToRoman(gameModelForViews.getCurrentProgramStatus().getNumLevel()).toLowerCase();
 
 			drawTwoCenterTextLines(g2d, "gAME oVER", levelText);
-		} else if (gameModelForView.getCurrentProgramStatus().isLevelEnding()) {
+		} else if (gameModelForViews.getCurrentProgramStatus().isLevelEnding()) {
 			drawTwoCenterTextLines(g2d, "nEXT LEVEL", "gET READY");
-		} else if (gameModelForView.getLadybug().getStatus() == LadybugStatus.DYING) {
+		} else if (gameModelForViews.getLadybug().getStatus() == LadybugStatus.DYING) {
 			ladybugDyingView.inProgress();
 			drawGhosts(g2d);
 			drawLadybug(g2d, ladybugDyingView);
-		} else if (gameModelForView.getLadybug().getStatus() == LadybugStatus.DEAD) {
+		} else if (gameModelForViews.getLadybug().getStatus() == LadybugStatus.DEAD) {
 			ladybugDyingView.init();
-		} else if (gameModelForView.getLadybug().getStatus() != LadybugStatus.DEAD) {
+		} else if (gameModelForViews.getLadybug().getStatus() != LadybugStatus.DEAD) {
 			drawLadybug(g2d, ladybugView);
 			drawGhosts(g2d);
 			drawScoresIncrement(g2d);
 		} else {
-			var msg = "NO DISPLAY FOR STATUS " + gameModelForView.getCurrentProgramStatus();
+			var msg = "NO DISPLAY FOR STATUS " + gameModelForViews.getCurrentProgramStatus();
 			drawOneCenterTextLine(g2d, msg);
 			logger.error(msg);
 		}
@@ -155,8 +148,8 @@ public class CentralView extends JPanel implements Observer, DoActionAfterTimer 
 
 	private void drawEightCenterTextLines(Graphics2D g2d, String line1, String line2, String line3, String line4,
 	        String line5, String line6, String line7, String line8) {
-		var x = gameModelForView.getScreenData().getScreenWidth();
-		var y = gameModelForView.getScreenData().getScreenHeight();
+		var x = gameModelForViews.getScreenData().getScreenWidth();
+		var y = gameModelForViews.getScreenData().getScreenHeight();
 		var metr = getFontMetrics(defaultFont);
 		g2d.setColor(Color.white);
 		g2d.setFont(defaultFont);
@@ -171,37 +164,49 @@ public class CentralView extends JPanel implements Observer, DoActionAfterTimer 
 	}
 
 	private void drawGhosts(Graphics2D g2d) {
-		var ladybugPosition = gameModelForView.getLadybug().getPosition();
-		gameModelForView.getGroupGhosts().getGhosts().stream()
-		        .filter(g -> g.getPosition().distance(ladybugPosition) <= 4 * Constants.BLOCK_SIZE || !g.isComputed()
-		                || gameModelForView.getGroupGhosts().getGhosts().stream()
-		                        .anyMatch(gc -> !gc.isComputed()
-		                                && g.getPosition().distance(gc.getPosition()) <= 4 * Constants.BLOCK_SIZE)
-		                || !gameModelForView.getCurrentProgramStatus().isInGame()
-		                || !gameModelForView.getScreenData().isLitLampMode())
+		var ladybugPosition = gameModelForViews.getLadybug().getPosition();
+		gameModelForViews.getGroupGhosts()
+				.getGhosts()
+				.stream()
+		        .filter(ghost -> ghost.getPosition().distance(ladybugPosition) <= 4 * Constants.BLOCK_SIZE || !ghost.isComputed()
+		                || gameModelForViews.getGroupGhosts().getGhosts().stream().anyMatch(gc -> !gc.isComputed() && ghost.getPosition().distance(gc.getPosition()) <= 4 * Constants.BLOCK_SIZE)
+		                || !gameModelForViews.getCurrentProgramStatus().isInGame()
+		                || !gameModelForViews.getScreenData().isLitLampMode())
 		        .forEach(g -> g2d.drawImage(ghostView.getImage(g), g.getPosition().x + 1, g.getPosition().y + 1, this));
+
+		if (gameModelForViews.isDebugMode()) {
+			g2d.setColor(Color.RED);
+			gameModelForViews.getGroupGhosts()
+					.getGhosts()
+					.stream()
+					.filter(ghost -> ghost.getMaximumAttackDist() > 0)
+					.forEach(ghost -> g2d.drawOval(ghost.getPosition().x + 1 - ghost.getMaximumAttackDist() + Constants.BLOCK_SIZE / 2
+							, ghost.getPosition().y + 1 - ghost.getMaximumAttackDist() + Constants.BLOCK_SIZE / 2
+							, ghost.getMaximumAttackDist() * 2
+							, ghost.getMaximumAttackDist() * 2));
+		}
 	}
 
 	private void drawLadybug(Graphics2D g2d, LadybugCommun ladybugCommon) {
-		var viewDirection = gameModelForView.getLadybug().getViewDirection();
-		var getPosition = gameModelForView.getLadybug().getPosition();
+		var viewDirection = gameModelForViews.getLadybug().getViewDirection();
+		var getPosition = gameModelForViews.getLadybug().getPosition();
 		var image = ladybugCommon.getImage(viewDirection);
 		g2d.drawImage(image, getPosition.x + 1, getPosition.y + 1, this);
 	}
 
 	private void drawMaze(Graphics2D g2d) {
-		var ladybugPosition = gameModelForView.getLadybug().getPosition();
-		for (var y = 0; y < gameModelForView.getScreenData().getScreenHeight(); y += Constants.BLOCK_SIZE) {
-			for (var x = 0; x < gameModelForView.getScreenData().getCurrentLevel().getNbrBlocksByLine()
+		var ladybugPosition = gameModelForViews.getLadybug().getPosition();
+		for (var y = 0; y < gameModelForViews.getScreenData().getScreenHeight(); y += Constants.BLOCK_SIZE) {
+			for (var x = 0; x < gameModelForViews.getScreenData().getCurrentLevel().getNbrBlocksByLine()
 			        * Constants.BLOCK_SIZE; x += Constants.BLOCK_SIZE) {
 				var positionScreenBlock = new Point(x, y);
 
 				if ((ladybugPosition.distance(positionScreenBlock) <= 3.5 * Constants.BLOCK_SIZE)
-				        || gameModelForView.getGroupGhosts().getGhosts().stream().filter(g -> !g.isComputed()).anyMatch(
+				        || gameModelForViews.getGroupGhosts().getGhosts().stream().filter(g -> !g.isComputed()).anyMatch(
 				                g -> g.getPosition().distance(positionScreenBlock) <= 3.5 * Constants.BLOCK_SIZE)
-				        || !gameModelForView.getCurrentProgramStatus().isInGame()
-				        || !gameModelForView.getScreenData().isLitLampMode()) {
-					screenBlockView.display(g2d, gameModelForView.getScreenData(), x, y);
+				        || !gameModelForViews.getCurrentProgramStatus().isInGame()
+				        || !gameModelForViews.getScreenData().isLitLampMode()) {
+					screenBlockView.display(g2d, gameModelForViews.getScreenData(), x, y);
 				}
 
 			}
@@ -209,8 +214,8 @@ public class CentralView extends JPanel implements Observer, DoActionAfterTimer 
 	}
 
 	private void drawOneCenterTextLine(Graphics2D g2d, String text) {
-		var x = gameModelForView.getScreenData().getScreenWidth();
-		var y = gameModelForView.getScreenData().getScreenHeight();
+		var x = gameModelForViews.getScreenData().getScreenWidth();
+		var y = gameModelForViews.getScreenData().getScreenHeight();
 		var metr = getFontMetrics(defaultFont);
 		g2d.setColor(Color.white);
 		g2d.setFont(defaultFont);
@@ -221,9 +226,9 @@ public class CentralView extends JPanel implements Observer, DoActionAfterTimer 
 	 * FIXME : utiliser les streams comme dans drawGhosts(Graphics2D g2d)
 	 */
 	private void drawPresentationGhosts(Graphics2D g2d) {
-		var x = gameModelForView.getScreenData().getScreenWidth() / 2 - (7 * Constants.BLOCK_SIZE) / 2;
-		var y = gameModelForView.getScreenData().getScreenHeight() / 2;
-		List<Ghost> ghosts = gameModelForView.getGroupGhosts().getGhosts().stream().collect(Collectors.toList());
+		var x = gameModelForViews.getScreenData().getScreenWidth() / 2 - (7 * Constants.BLOCK_SIZE) / 2;
+		var y = gameModelForViews.getScreenData().getScreenHeight() / 2;
+		var ghosts = gameModelForViews.getGroupGhosts().getGhosts().stream().toList();
 		for (Ghost ghost : ghosts) {
 			g2d.drawImage(ghostView.getImage(ghost), x, y, this);
 			x += 2 * Constants.BLOCK_SIZE;
@@ -234,20 +239,18 @@ public class CentralView extends JPanel implements Observer, DoActionAfterTimer 
 		g2d.setColor(Color.WHITE);
 		g2d.setFont(scoreFont);
 		var metr = getFontMetrics(scoreFont);
-		int x;
-		int y;
 		// Affichage des scores incréments
-		for (Message message : gameModelForView.getGroupMessages().getMessages()) {
-			x = message.getPosition().x + Constants.BLOCK_SIZE / 2 - metr.stringWidth(message.getValue()) / 2;
-			y = message.getPosition().y + Constants.BLOCK_SIZE / 2;
+		for (Message message : gameModelForViews.getGroupMessages().getMessages()) {
+			var x = message.getPosition().x + Constants.BLOCK_SIZE / 2 - metr.stringWidth(message.getValue()) / 2;
+			var y = message.getPosition().y + Constants.BLOCK_SIZE / 2;
 			g2d.drawString(message.getValue() + message.getMessageType().getEndMessage(), x, y);
 		}
 	}
 
 	private void drawSevenCenterTextLines(Graphics2D g2d, String line1, String line2, String line3, String line4,
 	        String line5, String line6, String line7) {
-		var x = gameModelForView.getScreenData().getScreenWidth();
-		var y = gameModelForView.getScreenData().getScreenHeight();
+		var x = gameModelForViews.getScreenData().getScreenWidth();
+		var y = gameModelForViews.getScreenData().getScreenHeight();
 		var metr = getFontMetrics(defaultFont);
 		g2d.setColor(Color.white);
 		g2d.setFont(defaultFont);
@@ -261,8 +264,8 @@ public class CentralView extends JPanel implements Observer, DoActionAfterTimer 
 	}
 
 	private void drawThreeCenterTextLines(Graphics2D g2d, String line1, String line2, String line3) {
-		var x = gameModelForView.getScreenData().getScreenWidth();
-		var y = gameModelForView.getScreenData().getScreenHeight();
+		var x = gameModelForViews.getScreenData().getScreenWidth();
+		var y = gameModelForViews.getScreenData().getScreenHeight();
 		var metr = getFontMetrics(defaultFont);
 		g2d.setColor(Color.white);
 		g2d.setFont(defaultFont);
@@ -272,8 +275,8 @@ public class CentralView extends JPanel implements Observer, DoActionAfterTimer 
 	}
 
 	private void drawTwoCenterTextLines(Graphics2D g2d, String line1, String line2) {
-		var x = gameModelForView.getScreenData().getScreenWidth();
-		var y = gameModelForView.getScreenData().getScreenHeight();
+		var x = gameModelForViews.getScreenData().getScreenWidth();
+		var y = gameModelForViews.getScreenData().getScreenHeight();
 		var metr = getFontMetrics(defaultFont);
 		g2d.setColor(Color.white);
 		g2d.setFont(defaultFont);
@@ -290,7 +293,7 @@ public class CentralView extends JPanel implements Observer, DoActionAfterTimer 
 
 	@Override
 	public void paintComponent(Graphics g) {
-		if (gameModelForView != null) {
+		if (gameModelForViews != null) {
 			super.paintComponent(g);
 			draw(g);
 		}
@@ -298,7 +301,7 @@ public class CentralView extends JPanel implements Observer, DoActionAfterTimer 
 
 	@Override
 	public void update(Observable gameModel, Object used) {
-		gameModelForView = (GameModelForViews) gameModel;
+		gameModelForViews = (GameModelForViews) gameModel;
 		repaint();
 	}
 }
